CODEX- reject drifted Page Mapping captures